--- a/frontend/pages/ayuda.html
+++ b/frontend/pages/ayuda.html
@@ -1,160 +1,187 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/principal.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
-    <title>Sección de Ayuda - E-commerce</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+  <link rel="stylesheet" href="../css/principal.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
+  <title>Sección de Ayuda - E-commerce</title>
 </head>
+
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-  <div class="container-fluid">
-    <a class="navbar-brand d-flex align-items-center" href="#">
-      <img src="../imagenes/427189999_950988366646197_7228972704184196983_n.jpg" alt="Logo" width="30" height="30" class="d-inline-block align-text-top me-2" />
-      ESMIRLO FC
-    </a>
-
-    <div class="d-flex align-items-center ms-auto">
-      <a class="nav-link me-3" href="https://www.instagram.com/esmirlo.fc/?igsh=MWZyYjNndG15dDJxcA%3D%3D#" target="_blank">
-        <i class="bi bi-instagram fs-5"></i>
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <a class="navbar-brand d-flex align-items-center" href="principal.html">
+        <img src="../imagenes/427189999_950988366646197_7228972704184196983_n.jpg" alt="Logo" width="30" height="30"
+          class="d-inline-block align-text-top me-2" />
+        ESMIRLO FC
       </a>
-      <a class="nav-link me-3 position-relative" href="carrito.html">
-        <i class="bi bi-cart fs-5"></i>
-        <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger" id="cart-count">0</span>
-      </a>
-      <a class="nav-link text-muted small" href="https://www.google.com.ar/maps/place/Av.+V%C3%A9lez+Sarsfield+1234,+X5000+C%C3%B3rdoba" target="_blank">📍</a>
-    </div>
 
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+      <div class="d-flex align-items-center ms-auto">
+        <a class="nav-link me-3" href="https://www.instagram.com/esmirlo.fc/?igsh=MWZyYjNndG15dDJxcA%3D%3D#"
+          target="_blank">
+          <i class="bi bi-instagram fs-5"></i>
+        </a>
+        <a class="nav-link me-3 position-relative" href="carrito.html">
+          <i class="bi bi-cart fs-5"></i>
+          <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
+            id="cart-count">0</span>
+        </a>
+        <a class="nav-link text-muted small"
+          href="https://www.google.com.ar/maps/place/Av.+V%C3%A9lez+Sarsfield+1234,+X5000+C%C3%B3rdoba"
+          target="_blank">📍</a>
+      </div>
 
-    <div class="collapse navbar-collapse" id="navbarContent">
-      <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
-        <li class="nav-item dropdown">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent"
+        aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarContent">
+        <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+          <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Categorías</a>
             <ul class="dropdown-menu" id="categorias-dropdown"></ul>
           </li>
-        <li class="nav-item"><a class="nav-link" href="ofertas.html">Ofertas</a></li>
-        <li class="nav-item"><a class="nav-link" href="ayuda.html">Ayuda</a></li>
-        <li class="nav-item"><a class="nav-link" onclick="logout()">Cerrar sesion</a></li>
-      </ul>
+          <li class="nav-item"><a class="nav-link" href="ofertas.html">Ofertas</a></li>
+          <li class="nav-item"><a class="nav-link" href="ayuda.html">Ayuda</a></li>
+          <li class="nav-item"><a class="nav-link" onclick="logout()">Cerrar sesion</a></li>
+        </ul>
+      </div>
     </div>
-  </div>
-</nav>
+  </nav>
 
 
-    <div class="container py-5">
-        <h2 class="text-center mb-4">Sección de Ayuda</h2>
-        <p class="text-center mb-5">Encuentra las respuestas a las preguntas más frecuentes sobre nuestros productos y servicios.</p>
+  <div class="container py-5">
+    <h2 class="text-center mb-4">Sección de Ayuda</h2>
+    <p class="text-center mb-5">Encuentra las respuestas a las preguntas más frecuentes sobre nuestros productos y
+      servicios.</p>
 
-        <div class="accordion" id="faqAccordion">
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="faqHeading1">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faqCollapse1" aria-expanded="false" aria-controls="faqCollapse1">
-                        ¿Cómo puedo realizar una compra en línea?
-                    </button>
-                </h2>
-                <div id="faqCollapse1" class="accordion-collapse collapse" aria-labelledby="faqHeading1" data-bs-parent="#faqAccordion">
-                    <div class="accordion-body">
-                        Para realizar una compra, simplemente navega por nuestra tienda, selecciona los productos que deseas agregar al carrito, y sigue el proceso de pago donde podrás ingresar tu información de envío y realizar el pago de forma segura.
-                    </div>
-                </div>
-            </div>
-
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="faqHeading2">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faqCollapse2" aria-expanded="false" aria-controls="faqCollapse2">
-                        ¿Puedo cancelar un pedido después de haberlo realizado?
-                    </button>
-                </h2>
-                <div id="faqCollapse2" class="accordion-collapse collapse" aria-labelledby="faqHeading2" data-bs-parent="#faqAccordion">
-                    <div class="accordion-body">
-                        Si necesitas cancelar tu pedido, puedes hacerlo dentro de las primeras 2 horas después de realizarlo. Si ya ha pasado este tiempo, lamentablemente no podremos cancelar el pedido. Para más detalles, contacta con nuestro servicio de atención al cliente al <strong>+1 800-123-4567</strong>.
-                    </div>
-                </div>
-            </div>
-
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="faqHeading3">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faqCollapse3" aria-expanded="false" aria-controls="faqCollapse3">
-                        ¿Ofrecen envío gratuito?
-                    </button>
-                </h2>
-                <div id="faqCollapse3" class="accordion-collapse collapse" aria-labelledby="faqHeading3" data-bs-parent="#faqAccordion">
-                    <div class="accordion-body">
-                        Sí, ofrecemos envío gratuito en pedidos superiores a <strong>$50</strong>. Para compras menores, el costo de envío dependerá de la ubicación de entrega.
-                    </div>
-                </div>
-            </div>
-
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="faqHeading4">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faqCollapse4" aria-expanded="false" aria-controls="faqCollapse4">
-                        ¿Cómo puedo devolver un producto?
-                    </button>
-                </h2>
-                <div id="faqCollapse4" class="accordion-collapse collapse" aria-labelledby="faqHeading4" data-bs-parent="#faqAccordion">
-                    <div class="accordion-body">
-                        Si no estás satisfecho con tu compra, puedes devolverla dentro de los 30 días posteriores a la recepción del producto. Solo tienes que ponerte en contacto con nuestro servicio de atención al cliente al <strong>+1 800-123-4567</strong> y te proporcionaremos las instrucciones necesarias.
-                    </div>
-                </div>
-            </div>
-
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="faqHeading5">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faqCollapse5" aria-expanded="false" aria-controls="faqCollapse5">
-                        ¿Puedo pagar con tarjeta de crédito?
-                    </button>
-                </h2>
-                <div id="faqCollapse5" class="accordion-collapse collapse" aria-labelledby="faqHeading5" data-bs-parent="#faqAccordion">
-                    <div class="accordion-body">
-                        Sí, aceptamos pagos con tarjeta de crédito, débito, PayPal y otros métodos de pago seguros. Si tienes problemas con el pago, contáctanos al <strong>+1 800-123-4567</strong>.
-                    </div>
-                </div>
-            </div>
+    <div class="accordion" id="faqAccordion">
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="faqHeading1">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+            data-bs-target="#faqCollapse1" aria-expanded="false" aria-controls="faqCollapse1">
+            ¿Cómo puedo realizar una compra en línea?
+          </button>
+        </h2>
+        <div id="faqCollapse1" class="accordion-collapse collapse" aria-labelledby="faqHeading1"
+          data-bs-parent="#faqAccordion">
+          <div class="accordion-body">
+            Para realizar una compra, simplemente navega por nuestra tienda, selecciona los productos que deseas agregar
+            al carrito, y sigue el proceso de pago donde podrás ingresar tu información de envío y realizar el pago de
+            forma segura.
+          </div>
         </div>
-    </div>
-    <div class="text-center mt-5">
-    <a href="principal.html" class="btn btn-primary">Volver</a>
-    </div>
-    <script type="module" src="../utils/sessions.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
-    <script type="module" src="../js/ayuda.js"></script>
-    <!-- Suscripcion -->
-<section class="py-5 mt-5 text-white" style="background: linear-gradient(135deg, #8B0000, #FF0000);">
-  <div class="container text-center">
-    <h3 class="fw-bold mb-3 text-uppercase">¡Unite a la hinchada de ESMIRLO FC!</h3>
-    <p class="mb-4 fs-5">Recibí en tu correo las últimas camisetas, ofertas y noticias del club.</p>
-    <form class="row justify-content-center align-items-center g-2" id="form-suscripcion">
-      <div class="col-md-5">
-        <input type="email" class="form-control form-control-lg border-0" id="inputCorreo"
-          placeholder="Ingresá tu correo" required>
       </div>
-      <div class="col-auto">
-        <button type="submit" class="btn btn-light btn-lg fw-bold px-4">Suscribirme</button>
-      </div>
-    </form>
-    <div id="mensajeSuscripcion" class="mt-3 text-white fw-semibold d-none">
-      ¡Gracias por sumarte a la familia ESMIRLO!
-    </div>
-  </div>
-</section>
 
-<footer class="bg-body-tertiary border-top mt-5">
-  <div class="container py-3 text-center">
-    <div class="d-inline-flex align-items-center gap-4">
-      <a href="https://www.instagram.com/esmirlo.fc" target="_blank" class="text-dark text-decoration-none d-flex align-items-center gap-2">
-        <i class="bi bi-instagram fs-5"></i> <span>Instagram</span>
-      </a>
-      <a href="https://www.google.com.ar/maps/place/Av.+V%C3%A9lez+Sarsfield+1234,+X5000+C%C3%B3rdoba"
-         target="_blank" class="text-dark text-decoration-none d-flex align-items-center gap-2">
-        <span style="font-size: 1.2rem;">📍</span> <span>Ubicación</span>
-      </a>
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="faqHeading2">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+            data-bs-target="#faqCollapse2" aria-expanded="false" aria-controls="faqCollapse2">
+            ¿Puedo cancelar un pedido después de haberlo realizado?
+          </button>
+        </h2>
+        <div id="faqCollapse2" class="accordion-collapse collapse" aria-labelledby="faqHeading2"
+          data-bs-parent="#faqAccordion">
+          <div class="accordion-body">
+            Si necesitas cancelar tu pedido, puedes hacerlo dentro de las primeras 2 horas después de realizarlo. Si ya
+            ha pasado este tiempo, lamentablemente no podremos cancelar el pedido. Para más detalles, contacta con
+            nuestro servicio de atención al cliente al <strong>+1 800-123-4567</strong>.
+          </div>
+        </div>
+      </div>
+
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="faqHeading3">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+            data-bs-target="#faqCollapse3" aria-expanded="false" aria-controls="faqCollapse3">
+            ¿Ofrecen envío gratuito?
+          </button>
+        </h2>
+        <div id="faqCollapse3" class="accordion-collapse collapse" aria-labelledby="faqHeading3"
+          data-bs-parent="#faqAccordion">
+          <div class="accordion-body">
+            Sí, ofrecemos envío gratuito en pedidos superiores a <strong>$50</strong>. Para compras menores, el costo de
+            envío dependerá de la ubicación de entrega.
+          </div>
+        </div>
+      </div>
+
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="faqHeading4">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+            data-bs-target="#faqCollapse4" aria-expanded="false" aria-controls="faqCollapse4">
+            ¿Cómo puedo devolver un producto?
+          </button>
+        </h2>
+        <div id="faqCollapse4" class="accordion-collapse collapse" aria-labelledby="faqHeading4"
+          data-bs-parent="#faqAccordion">
+          <div class="accordion-body">
+            Si no estás satisfecho con tu compra, puedes devolverla dentro de los 30 días posteriores a la recepción del
+            producto. Solo tienes que ponerte en contacto con nuestro servicio de atención al cliente al <strong>+1
+              800-123-4567</strong> y te proporcionaremos las instrucciones necesarias.
+          </div>
+        </div>
+      </div>
+
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="faqHeading5">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+            data-bs-target="#faqCollapse5" aria-expanded="false" aria-controls="faqCollapse5">
+            ¿Puedo pagar con tarjeta de crédito?
+          </button>
+        </h2>
+        <div id="faqCollapse5" class="accordion-collapse collapse" aria-labelledby="faqHeading5"
+          data-bs-parent="#faqAccordion">
+          <div class="accordion-body">
+            Sí, aceptamos pagos con tarjeta de crédito, débito, PayPal y otros métodos de pago seguros. Si tienes
+            problemas con el pago, contáctanos al <strong>+1 800-123-4567</strong>.
+          </div>
+        </div>
+      </div>
     </div>
   </div>
-</footer>
+  <div class="text-center mt-5">
+    <a href="principal.html" class="btn btn-primary">Volver</a>
+  </div>
+
+  <!-- Suscripcion -->
+  <section class="py-5 mt-5 text-white" style="background: linear-gradient(135deg, #8B0000, #FF0000);">
+    <div class="container text-center">
+      <h3 class="fw-bold mb-3 text-uppercase">¡Unite a la hinchada de ESMIRLO FC!</h3>
+      <p class="mb-4 fs-5">Recibí en tu correo las últimas camisetas, ofertas y noticias del club.</p>
+      <form class="row justify-content-center align-items-center g-2" id="form-suscripcion">
+        <div class="col-auto">
+          <button type="submit" class="btn btn-light btn-lg fw-bold px-4">Suscribirme</button>
+        </div>
+      </form>
+      <div id="mensajeSuscripcion" class="mt-3 text-white fw-semibold d-none">
+        ¡Gracias por sumarte a la familia ESMIRLO!
+      </div>
+    </div>
+  </section>
+
+  <footer class="bg-body-tertiary border-top mt-5">
+    <div class="container py-3 text-center">
+      <div class="d-inline-flex align-items-center gap-4">
+        <a href="https://www.instagram.com/esmirlo.fc" target="_blank"
+          class="text-dark text-decoration-none d-flex align-items-center gap-2">
+          <i class="bi bi-instagram fs-5"></i> <span>Instagram</span>
+        </a>
+        <a href="https://www.google.com.ar/maps/place/Av.+V%C3%A9lez+Sarsfield+1234,+X5000+C%C3%B3rdoba" target="_blank"
+          class="text-dark text-decoration-none d-flex align-items-center gap-2">
+          <span style="font-size: 1.2rem;">📍</span> <span>Ubicación</span>
+        </a>
+      </div>
+    </div>
+  </footer>
+  <script type="module" src="../utils/sessions.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
+  <script type="module" src="../js/ayuda.js"></script>
 </body>
+
 </html>
