--- a/frontend/pages/gestion-usuarios.html
+++ b/frontend/pages/gestion-usuarios.html
@@ -71,6 +71,7 @@
             <th>Nombre y apellido</th>
             <th>Email</th>
             <th>Rol</th>
+            <th>Estado</th>
             <th>Acciones</th>
           </tr>
         </thead>
