--- a/frontend/pages/principal.html
+++ b/frontend/pages/principal.html
@@ -88,61 +88,58 @@
   </div>
 
   <div class="container py-5">
-  <h2 class="mb-4 text-center">Nuestros Productos</h2>
-  <div class="row row-cols-2 row-cols-md-3 row-cols-lg-5 g-4" id="productos-container">
+    <h2 class="mb-4 text-center">Nuestros Productos</h2>
+    <div class="row row-cols-2 row-cols-md-3 row-cols-lg-5 g-4" id="productos-container">
+    </div>
+    <div class="d-flex justify-content-between align-items-center mt-3">
+      <button id="btnAnterior" class="btn btn-outline-secondary btn-sm">Anterior</button>
+      <span id="paginaActual">Página 1</span>
+      <button id="btnSiguiente" class="btn btn-outline-secondary btn-sm">Siguiente</button>
+    </div>
+
   </div>
-  <div class="d-flex justify-content-between align-items-center mt-3">
-  <button id="btnAnterior" class="btn btn-outline-secondary btn-sm">Anterior</button>
-  <span id="paginaActual">Página 1</span>
-  <button id="btnSiguiente" class="btn btn-outline-secondary btn-sm">Siguiente</button>
-</div>
-
-</div>
 
 
+
+
+  <!-- SUSCRIPCIÓN -->
+
+  <section class="py-5 mt-5 text-white" style="background: linear-gradient(135deg, #8B0000, #FF0000);">
+    <div class="container text-center">
+      <h3 class="fw-bold mb-3 text-uppercase">¡Unite a la hinchada de ESMIRLO FC!</h3>
+      <p class="mb-4 fs-5">Recibí en tu correo las últimas camisetas, ofertas y noticias del club.</p>
+      <form class="row justify-content-center align-items-center g-2" id="form-suscripcion">
+        <div class="col-auto">
+          <button type="submit" class="btn btn-light btn-lg fw-bold px-4">Suscribirme</button>
+        </div>
+      </form>
+      <div id="mensajeSuscripcion" class="mt-3 text-white fw-semibold d-none">
+        ¡Gracias por sumarte a la familia ESMIRLO!
+      </div>
+    </div>
+  </section>
+
+
+
+  <footer class="bg-body-tertiary border-top mt-5">
+    <div class="container py-3 text-center">
+      <div class="d-inline-flex align-items-center gap-4">
+        <a href="https://www.instagram.com/esmirlo.fc" target="_blank"
+          class="text-dark text-decoration-none d-flex align-items-center gap-2">
+          <i class="bi bi-instagram fs-5"></i> <span>Instagram</span>
+        </a>
+        <a href="https://www.google.com.ar/maps/place/Av.+V%C3%A9lez+Sarsfield+1234,+X5000+C%C3%B3rdoba" target="_blank"
+          class="text-dark text-decoration-none d-flex align-items-center gap-2">
+          <span style="font-size: 1.2rem;">📍</span> <span>Ubicación</span>
+        </a>
+      </div>
+    </div>
+  </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
     crossorigin="anonymous"></script>
   <script type="module" src="../utils/sessions.js"></script>
   <script type="module" src="../js/principal.js"></script>
   <script type="module" src="../utils/products.js"></script>
-
-<!-- SUSCRIPCIÓN -->
-
-<section class="py-5 mt-5 text-white" style="background: linear-gradient(135deg, #8B0000, #FF0000);">
-  <div class="container text-center">
-    <h3 class="fw-bold mb-3 text-uppercase">¡Unite a la hinchada de ESMIRLO FC!</h3>
-    <p class="mb-4 fs-5">Recibí en tu correo las últimas camisetas, ofertas y noticias del club.</p>
-    <form class="row justify-content-center align-items-center g-2" id="form-suscripcion">
-      <div class="col-md-5">
-        <input type="email" class="form-control form-control-lg border-0" id="inputCorreo"
-          placeholder="Ingresá tu correo" required>
-      </div>
-      <div class="col-auto">
-        <button type="submit" class="btn btn-light btn-lg fw-bold px-4">Suscribirme</button>
-      </div>
-    </form>
-    <div id="mensajeSuscripcion" class="mt-3 text-white fw-semibold d-none">
-      ¡Gracias por sumarte a la familia ESMIRLO!
-    </div>
-  </div>
-</section>
-
-
-
-<footer class="bg-body-tertiary border-top mt-5">
-  <div class="container py-3 text-center">
-    <div class="d-inline-flex align-items-center gap-4">
-      <a href="https://www.instagram.com/esmirlo.fc" target="_blank" class="text-dark text-decoration-none d-flex align-items-center gap-2">
-        <i class="bi bi-instagram fs-5"></i> <span>Instagram</span>
-      </a>
-      <a href="https://www.google.com.ar/maps/place/Av.+V%C3%A9lez+Sarsfield+1234,+X5000+C%C3%B3rdoba"
-         target="_blank" class="text-dark text-decoration-none d-flex align-items-center gap-2">
-        <span style="font-size: 1.2rem;">📍</span> <span>Ubicación</span>
-      </a>
-    </div>
-  </div>
-</footer>
-
 </body>
 
 </html>
