--- a/frontend/pages/restablecer-contraseña.html
+++ b/frontend/pages/restablecer-contraseña.html
@@ -1,152 +1,53 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Restablecer contraseña</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" />
 </head>
+
 <body class="bg-light">
 
-<div class="container py-5" style="max-width: 480px;">
-  <h2 class="mb-4 text-center">Restablecer contraseña</h2>
+  <div class="container py-5" style="max-width: 480px;">
+    <h2 class="mb-4 text-center">Restablecer contraseña</h2>
 
-  <!-- Paso 1: Pedir email -->
-  <div id="step-email">
-    <form id="emailForm">
-      <div class="mb-3">
-        <label for="emailInput" class="form-label">Correo electrónico</label>
-        <input type="email" class="form-control" id="emailInput" placeholder="tuemail@ejemplo.com" required />
-        <div class="invalid-feedback">Por favor, ingresa un correo válido.</div>
-      </div>
-      <button type="submit" class="btn btn-primary w-100">Enviar código</button>
-    </form>
+    <!-- Paso 1: Pedir email -->
+    <div id="step-email">
+      <form id="emailForm">
+        <div class="mb-3">
+          <label for="emailInput" class="form-label">Correo electrónico</label>
+          <input type="email" class="form-control" id="emailInput" placeholder="tuemail@ejemplo.com" required />
+          <div class="invalid-feedback">Por favor, ingresa un correo válido.</div>
+        </div>
+        <button type="submit" class="btn btn-primary w-100">Enviar código</button>
+      </form>
+    </div>
+
+    <!-- Paso 2: Validar código y cambiar contraseña -->
+    <div id="step-reset" class="d-none">
+      <form id="resetForm">
+        <div class="mb-3">
+          <label for="codeInput" class="form-label">Código recibido</label>
+          <input type="text" class="form-control" id="codeInput" placeholder="Código de 6 dígitos" required
+            pattern="\d{6}" />
+          <div class="invalid-feedback">Ingresa un código válido de 6 dígitos.</div>
+        </div>
+        <div class="mb-3">
+          <label for="newPasswordInput" class="form-label">Nueva contraseña</label>
+          <input type="password" class="form-control" id="newPasswordInput" placeholder="Nueva contraseña" required
+            minlength="6" />
+          <div class="invalid-feedback">La contraseña debe tener al menos 6 caracteres.</div>
+        </div>
+        <button type="submit" class="btn btn-success w-100">Restablecer contraseña</button>
+      </form>
+    </div>
+
+    <div id="message" class="mt-4"></div>
   </div>
-
-  <!-- Paso 2: Validar código y cambiar contraseña -->
-  <div id="step-reset" class="d-none">
-    <form id="resetForm">
-      <div class="mb-3">
-        <label for="codeInput" class="form-label">Código recibido</label>
-        <input type="text" class="form-control" id="codeInput" placeholder="Código de 6 dígitos" required pattern="\d{6}" />
-        <div class="invalid-feedback">Ingresa un código válido de 6 dígitos.</div>
-      </div>
-      <div class="mb-3">
-        <label for="newPasswordInput" class="form-label">Nueva contraseña</label>
-        <input type="password" class="form-control" id="newPasswordInput" placeholder="Nueva contraseña" required minlength="6" />
-        <div class="invalid-feedback">La contraseña debe tener al menos 6 caracteres.</div>
-      </div>
-      <button type="submit" class="btn btn-success w-100">Restablecer contraseña</button>
-    </form>
-  </div>
-
-  <div id="message" class="mt-4"></div>
-</div>
-
-<script>
-  const emailForm = document.getElementById('emailForm');
-  const resetForm = document.getElementById('resetForm');
-  const stepEmail = document.getElementById('step-email');
-  const stepReset = document.getElementById('step-reset');
-  const messageDiv = document.getElementById('message');
-
-  let generatedCode = null;
-  let userEmail = null;
-
-  // Función simple para validar email con regex básica
-  function isValidEmail(email) {
-    const re = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
-    return re.test(email);
-  }
-
-  emailForm.addEventListener('submit', (e) => {
-    e.preventDefault();
-    messageDiv.innerHTML = '';
-
-    const emailInput = document.getElementById('emailInput');
-    const email = emailInput.value.trim();
-
-    // Validar email
-    if (!isValidEmail(email)) {
-      emailInput.classList.add('is-invalid');
-      return;
-    }
-    emailInput.classList.remove('is-invalid');
-//
-    // Simular comprobación que email existe (aquí aceptamos solo dominios @ejemplo.com)
-   // if (!email.endsWith('@ejemplo.com')) {
-     // messageDiv.innerHTML = `<div class="alert alert-danger" role="alert">
-       // El correo <strong>${email}</strong> no está registrado.
-      //</div>`;
-      //return;
-    //}
-//
-    // Generar código de 6 dígitos aleatorio
-    generatedCode = Math.floor(100000 + Math.random() * 900000).toString();
-    userEmail = email;
-
-    // Simular envío de email (aquí solo mostramos el código en pantalla)
-    messageDiv.innerHTML = `<div class="alert alert-info" role="alert">
-      Código de verificación enviado a <strong>${email}</strong>. (Simulado: código es <strong>${generatedCode}</strong>)
-    </div>`;
-
-    // Mostrar siguiente paso
-    stepEmail.classList.add('d-none');
-    stepReset.classList.remove('d-none');
-  });
-
-  resetForm.addEventListener('submit', (e) => {
-    e.preventDefault();
-    messageDiv.innerHTML = '';
-
-    const codeInput = document.getElementById('codeInput');
-    const newPasswordInput = document.getElementById('newPasswordInput');
-
-    const code = codeInput.value.trim();
-    const newPassword = newPasswordInput.value.trim();
-
-    // Validar inputs (HTML ya valida patrón y minlength pero chequeamos igual)
-    let hasError = false;
-
-    if (!/^\d{6}$/.test(code)) {
-      codeInput.classList.add('is-invalid');
-      hasError = true;
-    } else {
-      codeInput.classList.remove('is-invalid');
-    }
-
-    if (newPassword.length < 6) {
-      newPasswordInput.classList.add('is-invalid');
-      hasError = true;
-    } else {
-      newPasswordInput.classList.remove('is-invalid');
-    }
-
-    if (hasError) return;
-
-    // Validar código
-    if (code !== generatedCode) {
-      messageDiv.innerHTML = `<div class="alert alert-danger" role="alert">
-        Código de verificación incorrecto.
-      </div>`;
-      return;
-    }
-
-    // Simular restablecimiento correcto
-    messageDiv.innerHTML = `<div class="alert alert-success" role="alert">
-      Contraseña restablecida exitosamente para <strong>${userEmail}</strong>.
-    </div>`;
-
-    // Resetear formularios y pasos
-    resetForm.reset();
-    emailForm.reset();
-    generatedCode = null;
-    userEmail = null;
-
-    stepReset.classList.add('d-none');
-    stepEmail.classList.remove('d-none');
-  });
-</script>
+  <script type="module" src="../js/restablecerContraseña.js"></script>
   <script type="module" src="../utils/sessions.js"></script>
 </body>
+
 </html>
